--- a/src/webparts/showcaseGrid/components/ShowcaseGrid.module.scss
+++ b/src/webparts/showcaseGrid/components/ShowcaseGrid.module.scss
@@ -11,6 +11,39 @@
     margin: 0 auto;
   }
 
+  .placeholder {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    text-align: center;
+    padding: 40px;
+    background-color: #f8f8f8;
+    border: 2px dashed #c8c8c8;
+    border-radius: 4px;
+    margin: 20px;
+  
+    .placeholderIcon {
+      font-size: 48px;
+      color: #666;
+      margin-bottom: 16px;
+    }
+  
+    h2 {
+      margin: 0 0 8px 0;
+      color: #333;
+      font-size: 24px;
+      font-weight: normal;
+    }
+  
+    p {
+      margin: 0;
+      color: #666;
+      font-size: 14px;
+      max-width: 400px;
+      line-height: 1.5;
+    }
+  }
   .gridItem {
     position: relative;
     height: 500px;
